kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: memorygame-website
spec:
  type: ClusterIP
  selector:
    app: memorygame-website
  ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: http
